# postgres-resource

./: Cargo.toml
examples/hello_database/: Cargo.toml
examples/hello_database/migrations/2018-11-10-142413_create_world/: down.sql  up.sql
examples/hello_database/src/: main.rs  schema.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
postgres_resource_derive/: Cargo.toml
postgres_resource_derive/src/: attr.rs  builder.rs  field.rs  lib.rs  model.rs  queryable.rs  struct.rs
src/: controller.rs  lib.rs  test.rs  uuid.rs
