[package]
name = "postgres-resource"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.3.2", features = ["postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
mashup = "0.1"

[dev-dependencies]
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
