[package]
name = "postgres-resource"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.2", features = ["postgres", "chrono", "uuid"] }
postgres_resource_derive = { path = "./postgres_resource_derive" }
uuid = { version = "0.7", features = ["serde", "v4"] }
serde_derive = "1.0"
serde = "1.0"

[dev-dependencies]
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
