[package]
name = "postgres-resource"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "chrono", "uuid"] }
postgres_resource_derive = { path = "./postgres_resource_derive" }
serde_derive = "1.0"
serde = "1.0"

[replace]
"diesel:1.3.3" = { git = "https://github.com/diesel-rs/diesel" }
"diesel_derives:1.3.0" = { git = "https://github.com/diesel-rs/diesel" }

[dev-dependencies]
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
