[package]
name = "hello_database"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "chrono", "uuid"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
postgres-resource = { git = "https://github.com/technetos/postgres-resource" }
serde_derive = "1.0.27"
serde = "1.0"
serde_json = "1.0"
